- timer activity falatando ajustar o brilho, a runa por api, e cancelar timer jogando para direita

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
     package="com.onerb.timerlol">
     <uses-permission android:name="android.permission.RECORD_AUDIO"></uses-permission>
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.VIBRATE"/>
+
     <queries>
         <intent>
             <action android:name="android.speech.RecognitionService" />
