--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
             android:screenOrientation="portrait" android:launchMode="singleInstance" ></activity>
         <activity android:name="com.onerb.timerlol.CommandsActivity" android:launchMode="singleInstance"  android:screenOrientation="portrait"></activity>
         <activity android:name="com.onerb.timerlol.SettingsActivity" android:launchMode="singleInstance" android:screenOrientation="portrait"></activity>
+        <activity android:name="com.onerb.timerlol.CreateCustomCommands" android:launchMode="singleInstance" android:screenOrientation="portrait"></activity>
 
     </application>
 
